# FLoC-2026

./: LICENSE  README.md  floc-2026.cabal
src/: Lecture_01_RefinementTypes.lhs  Lecture_02_TheoremProving.lhs  Lecture_03_DataPropositions.lhs
src/Language/Haskell/Liquid/: ProofCombinators.hs
